_curso/23_service_mesh_istio/gateway-domains-falt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.spv-educa"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "a.spv-educa"
  gateways:
    - "ingress-gateway-k3s"
  http:
    # - fault:
    #     abort:
    #       httpStatus: 504
    #       percentage:
    #         value: 0
    - route:
      - destination:
          host: nginx-service
          subset: all
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subsets:
    - name: all
      labels:
        app: nginx
