_curso/23_service_mesh_istio/gateway-domains.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.spv-educa"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "a.spv-educa"
  gateways:
    - "ingress-gateway-k3s"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-b
spec:
  hosts:
  - "b.spv-educa"
  gateways:
    - "ingress-gateway-k3s"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
